Fri Aug 29 17:49:20 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (get_server_responses): Add comment about "ok^M".

Thu Aug 28 13:35:12 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* edit.c (edit_fileproc): If file doesn't exist, give an error.
	* sanity.sh (devcom2): Tests devcom2-12 through devcom2-17 test
	for above fix.

Tue Aug 26 16:42:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* subr.c (xmalloc): Reword error message to clarify that memory,
	not disk space or some other resource, is in question.

Tue Aug 26 01:04:48 1997  Steve Ralston <sralston@ppdpost.ks.symbios.com>
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add_directory): In allocating message, also allocate
	enough for tag and date related text.

Tue Aug 26 01:04:48 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (update_dirent_proc): Use update_dir not dir in "new
	directory" message.
	* find_names.c (find_dirs): Skip CVSNULLREPOS.
	(Find_Directories): Add comment about find_dirs skipping CVSATTIC
	and CVSLCK in working directories.
	* sanity.sh (basicb): New tests basicb-edir-* test for find_dirs
	fix.  Change other tests to test that Emptydir is not special in
	non-CVSNULLREPOS contexts.

Sun Aug 17 14:44:57 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* import.c (add_rcs_file): Add comment about -k overriding wrappers.

Sat Aug 16 18:09:05 1997   Martin Sjoelin <martin.sjoelin@ubs.ch>
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* import.c (add_rcs_file): Before opening the input file
	when importing, if options is binary, open the file in
	binary mode.

1997-08-16  enami tsugutomo  <enami@ba2.so-net.or.jp>

	* sanity.sh (mcopy): Unset CVSWRAPPERS last of all.

Fri Aug 15 11:11:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add_directory): Copy default file attributes from the
	parent directory to the directory we are creating.
	* fileattr.h, fileattr.c (fileattr_getall, fileattr_setall):
	New functions, in support of above.